--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Depends:
     grid,
     ggplot2
 Imports:
-    BBmisc (>= 1.4),
+    BBmisc (>= 1.4)
 Suggests:
     cmaes,
     DiceOptim,
@@ -21,34 +21,3 @@ Suggests:
 LazyData: yes
 ByteCompile: yes
 Version: 1.0
-Collate:
-    'calculateGap.R'
-    'checkStuff.R'
-    'chooseFinalPoint.R'
-    'evalTargetFunction.R'
-    'exampleRun_autoplot_1d.R'
-    'exampleRun_autoplot_2d.R'
-    'exampleRun_autoplot.R'
-    'exampleRun_plot_1d_discrete.R'
-    'exampleRun_plot_1d_numeric.R'
-    'exampleRun_plot_2d_numeric.R'
-    'exampleRun_plot.R'
-    'exampleRun.R'
-    'infillcrits.R'
-    'infill_get.R'
-    'infill_optimize.R'
-    'loadPackages.R'
-    'makeMBOFunction.R'
-    'makeMBOTask.R'
-    'makeTrafoFunction.R'
-    'MBOControl.R'
-    'mbo.R'
-    'multipoint_multicrit.R'
-    'proposePoints.R'
-    'repairPoint.R'
-    'zzz.R'
-    'infill_opt_focus.R'
-    'imputeFeatures.R'
-    'infill_opt_ea.R'
-    'multipoint_lcb.R'
-    'multipoint_cl.R'
