--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(makeMBOControl)
 export(makeMBOFunction)
 export(makeTrafoFunction)
 export(mbo)
+export(mboParEGO)
 import(BBmisc)
 import(ParamHelpers)
 import(ggplot2)
