--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 S3method(autoplot,MBOExampleRun)
 S3method(plot,MBOExampleRun)
+S3method(print,MBOControl)
 S3method(print,ParEGOResult)
 export(getGlobalOpt)
 export(makeMBOControl)
