--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,9 @@
 S3method(autoplot,MBOExampleRun)
 S3method(plot,MBOExampleRun)
 S3method(print,MBOControl)
+S3method(print,MBOExampleRun)
+S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
-S3method(print,ParegoResult)
 export(getGlobalOpt)
 export(makeMBOControl)
 export(makeMBOFunction)
