--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(makeMBOControl)
 export(makeMBOFunction)
 export(makeTrafoFunction)
 export(mbo)
-export(restartSavedMBO)
+export(mboContinue)
 import(BBmisc)
 import(ParamHelpers)
 import(ggplot2)
