Restructure control object, i.e., split it up in logical groups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,13 @@ S3method(print,MBOResult)
 export(getGlobalOpt)
 export(makeMBOControl)
 export(makeMBOFunction)
+export(makeMBOMultiFidControl)
 export(makeTrafoFunction)
 export(mbo)
 export(mboContinue)
+export(setMBOControlInfill)
+export(setMBOControlMulticrit)
+export(setMBOControlMultipoint)
 import(BBmisc)
 import(ParamHelpers)
 import(ggplot2)
