--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Depends:
     ParamHelpers,
     mlr,
     grid,
-    ggplot2
+    ggplot2,
+    checkmate
 Imports:
     BBmisc (>= 1.4),
     gridExtra,
