use RData extension not mboData

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(makeTrafoFunction)
 export(mbo)
 export(mboContinue)
 export(setMBOControlInfill)
+export(setMBOControlMultiFid)
 export(setMBOControlMulticrit)
 export(setMBOControlMultipoint)
 import(BBmisc)
