restructure controll objects to different files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,8 @@ export(mbo)
 export(mboContinue)
 export(setMBOControlInfill)
 export(setMBOControlMultiFid)
+export(setMBOControlMultiPoint)
 export(setMBOControlMulticrit)
-export(setMBOControlMultipoint)
 import(BBmisc)
 import(ParamHelpers)
 import(ggplot2)
