--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(setMBOControlMultiPoint)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
+import(lhs)
 import(mlr)
 import(parallelMap)
 import(plyr)
