work off FIXME: export getInfillCrits helper function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 export(autoplot.MBOExampleRun)
 export(getGlobalOpt)
+export(getInfillCrits)
 export(makeMBOControl)
 export(makeMBOFunction)
 export(makeTrafoFunction)
