--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(print,MBOResult)
 export(autoplot.MBOExampleRun)
 export(getGlobalOpt)
 export(getInfillCrits)
+export(getSupportedInfillOptFunctions)
 export(makeMBOControl)
 export(makeMBOFunction)
 export(makeTrafoFunction)
