--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(autoplot.MBOExampleRun)
 export(getGlobalOpt)
 export(getInfillCrits)
 export(getSupportedInfillOptFunctions)
+export(getSupportedMultipointInfillOptFunctions)
 export(makeMBOControl)
 export(makeMBOFunction)
 export(makeTrafoFunction)
