move makeTrafoFunction back to R directory and by the way fix an issue with it (it is needed by autoplot.exampleRun)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(makeMBOControl)
 export(makeMBOFunction)
+export(makeTrafoFunction)
 export(mbo)
 export(mboContinue)
 export(setMBOControlInfill)
