take care of consistent naming for our getter functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 export(autoplot.MBOExampleRun)
 export(getGlobalOpt)
-export(getInfillCrits)
+export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(makeMBOControl)
