--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(getGlobalOpt)
 export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
+export(log10Trafo)
+export(logTrafo)
 export(makeMBOControl)
 export(makeMBOFunction)
 export(makeTrafoFunction)
@@ -18,6 +20,7 @@ export(setMBOControlInfill)
 export(setMBOControlMultiCrit)
 export(setMBOControlMultiFid)
 export(setMBOControlMultiPoint)
+export(sqrtTrafo)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
