--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(log10Trafo)
 export(logTrafo)
 export(makeMBOControl)
 export(makeMBOFunction)
-export(makeTrafoFunction)
+export(makeMBOTrafoFunction)
 export(mbo)
 export(mboContinue)
 export(setMBOControlInfill)
