rename MBO trafo function: xxxTrafo to trafoXxx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,6 @@ export(getGlobalOpt)
 export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
-export(log10Trafo)
-export(logTrafo)
 export(makeMBOControl)
 export(makeMBOFunction)
 export(makeMBOTrafoFunction)
@@ -20,7 +18,9 @@ export(setMBOControlInfill)
 export(setMBOControlMultiCrit)
 export(setMBOControlMultiFid)
 export(setMBOControlMultiPoint)
-export(sqrtTrafo)
+export(trafoLog)
+export(trafoLog10)
+export(trafoSqrt)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
