--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,MBOExampleRun)
 S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 export(autoplot.MBOExampleRun)
+export(exampleRun)
 export(getGlobalOpt)
 export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
