add vectorized version of nsga2 for infillOptNSGA2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,3 +32,4 @@ import(plyr)
 import(reshape2)
 importFrom(soobench,global_minimum)
 importFrom(soobench,is_soo_function)
+useDynLib(mlrMBO,do_nsga2_vectorized)
