--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 export(autoplot.MBOExampleRun)
 export(exampleRun)
+export(exampleRunMultiCrit)
 export(getGlobalOpt)
 export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
