--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,21 +1,2 @@
-^makeR
-shiny
-todo-files
-^.*tar.gz$
-.gitignore
-.Rproj.user
-.travis.yml
-fragen.txt
-Makefile
-README.md
-test_all.R
-test_src.R
-todo.txt
-^bench
-^clement
-^doc
-^man-roxygen
-^multicrit_test.R
-^src/*.o
-^src/*.so
-^.editorconfig$
+^.*\.Rproj$
+^\.Rproj\.user$
