export autoplot for multicrit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,MBOExampleRunMultiCrit)
 S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 export(autoplot.MBOExampleRun)
+export(autoplot.MBOExampleRunMultiCrit)
 export(exampleRun)
 export(exampleRunMultiCrit)
 export(getGlobalOpt)
