remove render... methods from NAMESPACE, sorry for that commited unfinished stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,8 @@ S3method(print,MBOExampleRun)
 S3method(print,MBOExampleRunMultiCrit)
 S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
-S3method(renderExampleRunPlots,MBOExampleRun)
 S3method(trainLearner,regr.kmforrester)
+export(autoplot.MBOExampleRun)
 export(autoplot.MBOExampleRunMultiCrit)
 export(exampleRun)
 export(exampleRunMultiCrit)
@@ -21,7 +21,6 @@ export(makeMBOFunction)
 export(makeMBOTrafoFunction)
 export(mbo)
 export(mboContinue)
-export(renderExampleRunPlots)
 export(setMBOControlInfill)
 export(setMBOControlMultiCrit)
 export(setMBOControlMultiFid)
