--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,9 @@ Suggests:
     gridExtra,
     mco,
     testthat,
-    randomForest
+    randomForest,
+    rpart,
+    DiceKriging
 LazyData: yes
 ByteCompile: yes
 Version: 1.0
