more suggested packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,11 +28,15 @@ Suggests:
     cmaes,
     DiceKriging,
     DiceOptim,
+    earth,
     emoa,
     ggplot2,
     gridExtra,
+    kernlab, 
     kknn,
+    mboost, 
     mco,
+    nnet,
     party,
     randomForest,
     rpart,
