improve travis failure output

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ branches:
   except:
    - /-expt$/
 after_failure: 
-  - pwd
-  - ls -al mlrMBO.Rcheck 
-  - cat mlrMBO.Rcheck/examples_and_tests/tests_x64/run-all.Rout.fail
+  - cat mlrMBO.Rcheck/00install.out
+  - cat mlrMBO.Rcheck/00check.log
+  - cat mlrMBO.Rcheck/tests/run-all.Rout.fail 
 lnotifications:
   email:
     on_success: change
