--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ after_failure:
   - cat mlrMBO.Rcheck/00install.out
   - cat mlrMBO.Rcheck/00check.log
   - cat mlrMBO.Rcheck/tests/run-all.Rout.fail 
-lnotifications:
+notifications:
   email:
     on_success: change
     on_failure: change
