--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,16 +24,13 @@ Imports:
     gridExtra,
     parallelMap (>= 1.1),
     plyr,
-    reshape2,
-    soobench
+    reshape2
 Suggests:
     cmaes,
     DiceKriging,
     DiceOptim,
     earth,
     emoa,
-    ggplot2,
-    gridExtra,
     kernlab,
     kknn,
     mboost,
@@ -42,6 +39,7 @@ Suggests:
     party,
     randomForest,
     rpart,
+    soobench,
     testthat
 LazyData: yes
 ByteCompile: yes
