--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,10 +35,10 @@ export(trafoSqrt)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
+import(ggplot2)
+import(gridExtra)
 import(lhs)
 import(mlr)
 import(parallelMap)
 import(plyr)
 import(reshape2)
-importFrom(soobench,global_minimum)
-importFrom(soobench,is_soo_function)
