--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(trafoLog)
 export(trafoSqrt)
 import(BBmisc)
 import(ParamHelpers)
+import(RColorBrewer)
 import(checkmate)
 import(ggplot2)
 import(gridExtra)
