reviewed, exported and tested  plotEAF

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(makeMBOFunction)
 export(makeMBOTrafoFunction)
 export(mbo)
 export(mboContinue)
+export(plotEAF)
 export(setMBOControlInfill)
 export(setMBOControlMultiCrit)
 export(setMBOControlMultiFid)
