--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,3 +44,5 @@ import(mlr)
 import(parallelMap)
 import(plyr)
 import(reshape2)
+useDynLib(mlrMBO,c_eps_indicator)
+useDynLib(mlrMBO,c_sms_indicator)
