--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,17 @@ install:
 branches:
   except:
    - /-expt$/
-after_failure: 
+after_failure:
   - cat mlrMBO.Rcheck/00install.out
   - cat mlrMBO.Rcheck/00check.log
-  - cat mlrMBO.Rcheck/tests/run-all.Rout.fail 
+  - cat mlrMBO.Rcheck/tests/run-all.Rout.fail
 notifications:
   email:
+    recipients:
+      - bernd_bischl@gmx.net
+      - j.bossek@gmail.com
+      - daniel.horn@tu-dortmund.de
+      - michellang@gmail.com
+      - code@jakob-r.de
     on_success: change
     on_failure: change
