--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,4 @@ notifications:
       - michellang@gmail.com
       - code@jakob-r.de
     on_success: change
-    on_failure: change
+    on_failure: always
