--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 S3method(isFailureModel,MultiFidModel)
 S3method(makeRLearner,regr.kmforrester)
+S3method(makeWrappedModel,MultiFidBaggingWrapper)
 S3method(makeWrappedModel,MultiFidWrapper)
+S3method(predictLearner,MultiFidBaggingWrapper)
 S3method(predictLearner,MultiFidWrapper)
 S3method(predictLearner,regr.kmforrester)
 S3method(print,MBOControl)
@@ -11,6 +13,7 @@ S3method(print,MBOExampleRunMultiCrit)
 S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 S3method(print,MultiFidModel)
+S3method(trainLearner,MultiFidBaggingWrapper)
 S3method(trainLearner,MultiFidWrapper)
 S3method(trainLearner,regr.kmforrester)
 export(exampleRun)
