--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -8,8 +8,11 @@ tools
 .travis.yml
 
 ^.*tar.gz$
+bench
+fragen.txt
 install_dependencies.R
 Makefile
+multicrit_test.R
 README.md
 test_all.R
 test_src.R
