added colors argument to example run plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 S3method(isFailureModel,MultiFidModel)
 S3method(makeRLearner,regr.kmforrester)
-S3method(plot,MBOMultiObjResult)
 S3method(predictLearner,MultiFidWrapper)
 S3method(predictLearner,regr.kmforrester)
 S3method(print,MBOControl)
@@ -28,6 +27,7 @@ export(mbo)
 export(mboContinue)
 export(plotEAF)
 export(plotExampleRun)
+export(plotMBOResult)
 export(renderExampleRunPlot)
 export(setMBOControlInfill)
 export(setMBOControlMultiCrit)
