--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(makeMBOFunction)
 export(makeMBOTrafoFunction)
 export(mbo)
 export(mboContinue)
+export(mboFinalize)
 export(plotEAF)
 export(plotExampleRun)
 export(plotMBOResult)
