--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 S3method(getLearnerProperties,MultiFidWrapper)
 S3method(isFailureModel,MultiFidModel)
 S3method(makeRLearner,regr.kmforrester)
+S3method(plot,MBOMultiObjResult)
+S3method(plot,MBOSingleObjResult)
 S3method(predictLearner,MultiFidWrapper)
 S3method(predictLearner,regr.kmforrester)
 S3method(print,MBOControl)
@@ -28,7 +30,6 @@ export(mboContinue)
 export(mboFinalize)
 export(plotEAF)
 export(plotExampleRun)
-export(plotMBOResult)
 export(renderExampleRunPlot)
 export(setMBOControlInfill)
 export(setMBOControlMultiCrit)
