fix opt path and priorities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(makeRLearner,regr.kmforrester)
 S3method(plot,MBOMultiObjResult)
 S3method(plot,MBOSingleObjResult)
 S3method(predictLearner,MultiFidWrapper)
+S3method(predictLearner,TrafoWrapper)
 S3method(predictLearner,regr.kmforrester)
 S3method(print,MBOControl)
 S3method(print,MBOExampleRun)
@@ -15,6 +16,7 @@ S3method(print,MBOResult)
 S3method(renderExampleRunPlot,MBOExampleRun)
 S3method(renderExampleRunPlot,MBOExampleRunMultiCrit)
 S3method(trainLearner,MultiFidWrapper)
+S3method(trainLearner,TrafoWrapper)
 S3method(trainLearner,regr.kmforrester)
 export(exampleRun)
 export(exampleRunMultiCrit)
