--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     gridExtra,
     parallelMap (>= 1.1),
     plyr,
+    smoof (>= 1.2),
     reshape2,
     scales
 Suggests:
@@ -42,7 +43,6 @@ Suggests:
     party,
     randomForest,
     rpart,
-    soobench,
     testthat,
     eaf
 LazyData: yes
