--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,6 @@ export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(makeMBOControl)
-export(makeMBOFunction)
 export(makeMBOTrafoFunction)
 export(mbo)
 export(mboContinue)
@@ -49,5 +48,6 @@ import(parallelMap)
 import(plyr)
 import(reshape2)
 import(scales)
+import(smoof)
 useDynLib(mlrMBO,c_eps_indicator)
 useDynLib(mlrMBO,c_sms_indicator)
