finish refactoring of termination conditions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(setMBOControlInfill)
 export(setMBOControlMultiCrit)
 export(setMBOControlMultiFid)
 export(setMBOControlMultiPoint)
+export(setMBOControlTermination)
 export(trafoLog)
 export(trafoSqrt)
 import(BBmisc)
