--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,13 @@
-# travis config, based on https://github.com/craigcitro/r-travis
+language: R
+sudo: false
+cache: packages
 
-language: c
-script: ./travis-tool.sh run_tests
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-install:
-  - ./travis-tool.sh github_package hadley/testthat
-  - ./travis-tool.sh github_package hadley/assertthat
-  - ./travis-tool.sh github_package berndbischl/BBmisc
-  - ./travis-tool.sh github_package berndbischl/parallelMap
-  - ./travis-tool.sh github_package berndbischl/ParamHelpers
-  - ./travis-tool.sh github_package jakobbossek/smoof
-  - ./travis-tool.sh github_package mlr-org/mlr
-  - ./travis-tool.sh install_deps
-branches:
-  except:
-   - /-expt$/
-after_failure:
-  - cat mlrMBO.Rcheck/00install.out
-  - cat mlrMBO.Rcheck/00check.log
-  - cat mlrMBO.Rcheck/tests/run-all.Rout.fail
+r_github_packages:
+  - berndbischl/parallelMap
+  - berndbischl/ParamHelpers
+  - jakobbossek/smoof
+  - mlr-org/mlr
+
 notifications:
   email:
     recipients:
