--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,8 +26,7 @@ Imports:
     gridExtra,
     parallelMap (>= 1.1),
     plyr,
-    reshape2,
-    scales
+    reshape2
 Suggests:
     akima,
     cmaes,
