--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: R
 sudo: false
 cache: packages
+secure: "e2QLomaUqNvpHnGNdBXS4VO2/UWokrKl9UgYrqWo+fhpXaJiJuONNPNL44BuWZR2Cy7noTHrevVbTKBkGpqJR42mkjzcjd6qyR1Ctiveir+84/HTtmexouIUn5OFRH5dgyt/gquld31RlHlSYoKho3nZ7D7SnVExov9tp2FGRhU="
 
 r_github_packages:
   - berndbischl/parallelMap
