add ego entry point (Issue #138)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(makeMBOControl)
 export(makeMBOTrafoFunction)
 export(mbo)
 export(mboContinue)
+export(mboEgo)
 export(mboFinalize)
 export(plotEAF)
 export(plotExampleRun)
