asyn läuft :arrow_up: :tennis:

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
     gridExtra,
     parallelMap (>= 1.1),
     plyr,
-    reshape2
+    reshape2,
+    digest
 Suggests:
     akima,
     cmaes,
