Add function to preevaluate Design (TODO: Test and incl exec.time)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(mboContinue)
 export(mboFinalize)
 export(plotEAF)
 export(plotExampleRun)
+export(preevaluateDesign)
 export(renderExampleRunPlot)
 export(setMBOControlInfill)
 export(setMBOControlMultiCrit)
