Add automatic generation of best kriging learner

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 S3method(renderExampleRunPlot,MBOExampleRun)
 S3method(renderExampleRunPlot,MBOExampleRunMultiCrit)
+S3method(trainLearner,MboKrigingWrapper)
 S3method(trainLearner,MultiFidWrapper)
 S3method(trainLearner,regr.kmforrester)
 export(exampleRun)
@@ -24,6 +25,7 @@ export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(makeMBOControl)
 export(makeMBOTrafoFunction)
+export(makeMboKrigingLearner)
 export(mbo)
 export(mboContinue)
 export(mboFinalize)
