--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,60 @@ language: R
 sudo: false
 cache: packages
 warnings_are_errors: false
+r_check_args: "--as-cran --run-donttest"
 env:
   global:
     - _R_CHECK_TIMINGS_=0
     - secure: "e2QLomaUqNvpHnGNdBXS4VO2/UWokrKl9UgYrqWo+fhpXaJiJuONNPNL44BuWZR2Cy7noTHrevVbTKBkGpqJR42mkjzcjd6qyR1Ctiveir+84/HTtmexouIUn5OFRH5dgyt/gquld31RlHlSYoKho3nZ7D7SnVExov9tp2FGRhU="
 
 r_github_packages:
+  - mllg/checkmate
+  - berndbischl/BBmisc
   - berndbischl/ParamHelpers
+  - berndbischl/parallelMap
   - jakobbossek/smoof
   - mlr-org/mlr
+
+r_binary_packages:
+  - ggplot2
+  - RColorBrewer
+  - gridExtra
+  - plyr
+  - reshape2
+  - akima
+  - cmaes
+  - DiceOptim
+  - earth
+  - emoa
+  - GGally
+  - kernlab
+  - kknn
+  - mboost
+  - mco
+  - nnet
+  - party
+  - randomForest
+  - rpart
+  - eaf
+
+before_install:
+    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test -y
+    - Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
+    - Rscript -e 'install.packages("nlme", lib="/home/travis/R-bin/lib/R/library/")'
+before_script:
+    - curl -L https://raw.githubusercontent.com/mllg/travis-r-tools/master/update-packages.r -o /tmp/update-packages.r
+    - Rscript /tmp/update-packages.r
+
+after_success:
+    - git checkout master
+    - R --no-save <<< 'library("devtools"); document()'
+    - git config user.name $GIT_NAME
+    - git config user.email $GIT_EMAIL
+    - git config credential.helper "store --file=.git/credentials"
+    - echo "https://$GH_TOKEN:@github.com" >> .git/credentials
+    - git config push.default matching
+    - git commit man DESCRIPTION NAMESPACE -m "update auto-generated documentation [ci skip]" || true
+    - git push
 
 notifications:
   email:
