--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,9 +41,12 @@ import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
 import(ggplot2)
+import(grDevices)
 import(lhs)
 import(mlr)
 import(parallelMap)
 import(smoof)
+import(stats)
+import(utils)
 useDynLib(mlrMBO,c_eps_indicator)
 useDynLib(mlrMBO,c_sms_indicator)
