integrate RF correctly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,6 @@ S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 S3method(renderExampleRunPlot,MBOExampleRun)
 S3method(renderExampleRunPlot,MBOExampleRunMultiCrit)
-S3method(trainLearner,MboKrigingWrapper)
 S3method(trainLearner,MultiFidWrapper)
 S3method(trainLearner,regr.kmforrester)
 export(exampleRun)
@@ -25,7 +24,7 @@ export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(makeMBOControl)
 export(makeMBOTrafoFunction)
-export(makeMboKrigingLearner)
+export(makeMboLearner)
 export(mbo)
 export(mboContinue)
 export(mboFinalize)
