asyn wrapper work in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(getGlobalOpt)
 export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
+export(makeDiscreteWrapper)
 export(makeMBOControl)
 export(makeMBOTrafoFunction)
 export(makeMboLearner)
