use backports; use anyMissing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(trafoLog)
 export(trafoSqrt)
 import(BBmisc)
 import(ParamHelpers)
+import(backports)
 import(checkmate)
 import(ggplot2)
 import(grDevices)
