--- a/.travis.yml
+++ b/.travis.yml
@@ -1,53 +1,14 @@
-language: R
+language: r
 sudo: false
+cache: packages
+
 r:
+  - oldrel
   - release
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - gcc-4.9
-      - g++-4.9
-      - gfortran-4.9
-      - libgmp-dev
+  - devel
+
 env:
   global:
-    - _R_CHECK_TIMINGS_=0
-    - _R_CHECK_FORCE_SUGGESTS_=0
     - secure: "e2QLomaUqNvpHnGNdBXS4VO2/UWokrKl9UgYrqWo+fhpXaJiJuONNPNL44BuWZR2Cy7noTHrevVbTKBkGpqJR42mkjzcjd6qyR1Ctiveir+84/HTtmexouIUn5OFRH5dgyt/gquld31RlHlSYoKho3nZ7D7SnVExov9tp2FGRhU="
 
 warnings_are_errors: false
-r_check_args: "--as-cran --run-donttest"
-
-r_github_packages:
-  - berndbischl/parallelMap
-  - jakobbossek/smoof
-  - mlr-org/mlr
-
-r_packages:
-  - roxygen2
-
-
-before_install:
-  - mkdir $HOME/bin
-  - ln -s $(which gcc-4.9) $HOME/bin/gcc
-  - ln -s $(which g++-4.9) $HOME/bin/g++
-  - ln -s $(which gfortran-4.9) $HOME/bin/gfortran
-  - export PATH=$HOME/bin:$PATH
-  - echo $LD_LIBRARY_PATH
-  - echo $LIBRARY_PATH
-
-after_failure:
-  - ./travis-tool.sh dump_logs
-
-notifications:
-  email:
-    recipients:
-      - bernd_bischl@gmx.net
-      - j.bossek@gmail.com
-      - daniel.horn@tu-dortmund.de
-      - michellang@gmail.com
-      - code@jakob-r.de
-    on_success: change
-    on_failure: always
