Cleanups / system.time() fix (#261)
* use backports; use anyMissing

* avoid copies during trainModels

* use custom system.time helper

* unname result of measureTime

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Depends:
     ParamHelpers (>= 1.8),
     smoof (>= 1.3)
 Imports:
+    backports,
     BBmisc (>= 1.7),
     checkmate (>= 1.8.1),
     ggplot2,
