Add automatic generation of best learner for given problem (#223)
* Add automatic generation of best kriging learner

* ...

* integrate RF correctly

* roxygen

* Fix #255, jitter=TRUE for noisy kriging

* remove smoof::

* correct argument name

* improve description of automatic generation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(makeMBOControl)
 export(makeMBOTrafoFunction)
+export(makeMboLearner)
 export(mbo)
 export(mboContinue)
 export(mboFinalize)
