replaced reshape2 with data.table

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,10 +22,10 @@ Imports:
     backports,
     BBmisc (>= 1.7),
     checkmate (>= 1.8.1),
+    data.table,
     ggplot2,
     RColorBrewer,
-    parallelMap (>= 1.1),
-    reshape2
+    parallelMap (>= 1.1)
 Suggests:
     akima,
     cmaes,
