--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,9 @@ insert_final_newline = true
 indent_style = space
 trim_trailing_whitespace = true
 
+[*.md]
+indent_size = 2
+
 [*.{r,R}]
 indent_size = 2
 
