--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,11 +44,11 @@ import(backports)
 import(checkmate)
 import(ggplot2)
 import(grDevices)
-import(lhs)
 import(mlr)
 import(parallelMap)
 import(smoof)
 import(stats)
 import(utils)
+importFrom(lhs,randomLHS)
 useDynLib(mlrMBO,c_eps_indicator)
 useDynLib(mlrMBO,c_sms_indicator)
