--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,13 @@ Description: A framework for the (sequential) model-based parameter
     parameters of non-linear black-box single- or multiobjective target
     functions like an industrial simulator or a time-consuming algorithm using
     cheap surrogate models.
-Authors@R: c(person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role =
-    c("aut", "cre")), person("Jakob", "Bossek", email =
-    "jakob.bossek@tu-dortmund.de", role = "aut"), person("Daniel", "Horn",
-    email = "daniel.horn@tu-dortmund.de", role = "aut"), person("Michel",
-    "Lang", email = "michellang@gmail.com", role = "aut"))
+Authors@R: c(
+    person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut", "cre")), 
+    person("Jakob", "Bossek", email = "jakob.bossek@tu-dortmund.de", role = "aut"), 
+    person("Jakob", "Richter", email = "code@jakob-r.de", role = "aut"),
+    person("Daniel", "Horn", email = "daniel.horn@tu-dortmund.de", role = "aut"), 
+    person("Michel", "Lang", email = "michellang@gmail.com", role = "aut"),
+    person("Janek", "Thomas", email = "janek.thomas@stat.uni-muenchen.de", role = "aut"))
 License: BSD_3_clause + file LICENSE
 URL: https://github.com/berndbischl/mlrMBO
 BugReports: https://github.com/berndbischl/mlrMBO/issues
