--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,15 +9,15 @@ S3method(predictLearner,MultiFidWrapper)
 S3method(predictLearner,regr.kmforrester)
 S3method(print,MBOControl)
 S3method(print,MBOExampleRun)
-S3method(print,MBOExampleRunMultiCrit)
+S3method(print,MBOExampleRunMultiObj)
 S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 S3method(renderExampleRunPlot,MBOExampleRun)
-S3method(renderExampleRunPlot,MBOExampleRunMultiCrit)
+S3method(renderExampleRunPlot,MBOExampleRunMultiObj)
 S3method(trainLearner,MultiFidWrapper)
 S3method(trainLearner,regr.kmforrester)
 export(exampleRun)
-export(exampleRunMultiCrit)
+export(exampleRunMultiObj)
 export(getGlobalOpt)
 export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
@@ -32,8 +32,8 @@ export(plotEAF)
 export(plotExampleRun)
 export(renderExampleRunPlot)
 export(setMBOControlInfill)
-export(setMBOControlMultiCrit)
 export(setMBOControlMultiFid)
+export(setMBOControlMultiObj)
 export(setMBOControlMultiPoint)
 export(setMBOControlTermination)
 export(trafoLog)
