--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,10 @@ Description: A framework for the (sequential) model-based parameter
     functions like an industrial simulator or a time-consuming algorithm using
     cheap surrogate models.
 Authors@R: c(
-    person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut", "cre")), 
-    person("Jakob", "Bossek", email = "jakob.bossek@tu-dortmund.de", role = "aut"), 
+    person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut", "cre")),
+    person("Jakob", "Bossek", email = "jakob.bossek@tu-dortmund.de", role = "aut"),
     person("Jakob", "Richter", email = "code@jakob-r.de", role = "aut"),
-    person("Daniel", "Horn", email = "daniel.horn@tu-dortmund.de", role = "aut"), 
+    person("Daniel", "Horn", email = "daniel.horn@tu-dortmund.de", role = "aut"),
     person("Michel", "Lang", email = "michellang@gmail.com", role = "aut"),
     person("Janek", "Thomas", email = "janek.thomas@stat.uni-muenchen.de", role = "aut"))
 License: BSD_3_clause + file LICENSE
@@ -30,7 +30,7 @@ Imports:
     parallelMap (>= 1.1)
 Suggests:
     akima,
-    cmaes,
+    cmaesr (>= 1.0.2),
     DiceKriging,
     DiceOptim,
     earth,
