--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: mlrMBO
-Title: mlrMBO: A Toolbox for Model-Based Optimization of Expensive Black-Box Functions.
+Title: A Toolbox for Model-Based Optimization of Expensive Black-Box Functions
 Description: mlrMBO is a flexible and comprehensive R toolbox for model-based
 	optimization (MBO), also known as Bayesian optimization. It is designed for
 	both single- and multi-objective optimization with mixed continuous, categorical
@@ -12,13 +12,13 @@ Description: mlrMBO is a flexible and comprehensive R toolbox for model-based
 	mlrMBO is implemented in a modular fashion, such that single components can
 	be easily replaced or adapted by the user for specific use cases.
 Authors@R: c(
-    person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut", "cre")), 
-    person("Jakob", "Bossek", email = "jakob.bossek@tu-dortmund.de", role = "aut"), 
+    person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut", "cre")),
+    person("Jakob", "Bossek", email = "jakob.bossek@tu-dortmund.de", role = "aut"),
     person("Jakob", "Richter", email = "code@jakob-r.de", role = "aut"),
-    person("Daniel", "Horn", email = "daniel.horn@tu-dortmund.de", role = "aut"), 
+    person("Daniel", "Horn", email = "daniel.horn@tu-dortmund.de", role = "aut"),
     person("Michel", "Lang", email = "michellang@gmail.com", role = "aut"),
     person("Janek", "Thomas", email = "janek.thomas@stat.uni-muenchen.de", role = "aut"))
-License: BSD_3_clause + file LICENSE
+License: BSD_2_clause + file LICENSE
 URL: https://github.com/mlr-org/mlrMBO
 BugReports: https://github.com/mlr-org/mlrMBO/issues
 Depends:
