--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: mlrMBO
 Title: A Toolbox for Model-Based Optimization of Expensive Black-Box Functions
-Description: mlrMBO is a flexible and comprehensive R toolbox for model-based
-	optimization (MBO), also known as Bayesian optimization. It is designed for
+Description: Flexible and comprehensive R toolbox for model-based
+	optimization ('MBO'), also known as Bayesian optimization. It is designed for
 	both single- and multi-objective optimization with mixed continuous, categorical
-	and conditional parameters. The machine learning toolbox mlr provide dozens
+	and conditional parameters. The machine learning toolbox 'mlr' provide dozens
 	of regression learners to model the performance of the target algorithm with
 	respect to the parameter settings. It provides many different infill criteria to
-	guide the search process. Additional features include multi-point batch proposal,
-	parallelization as well as visualization and sophisticated logging mechanisms,
+	guide the search process. Additional features include multipoint batch proposal,
+	parallel exectution as well as visualization and sophisticated logging mechanisms,
 	which is especially useful for teaching and understanding of algorithm behavior.
-	mlrMBO is implemented in a modular fashion, such that single components can
+	'mlrMBO' is implemented in a modular fashion, such that single components can
 	be easily replaced or adapted by the user for specific use cases.
 Authors@R: c(
     person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut", "cre")),
