Switch to cmaesr (#283)
* replace cmaes with cmaesr

* cleanup

* fix accidentally destroyed example

* load cmaesr instead of cmaes

* update docs

* cmaesr 1.0.3

* finalize

* doc opt.restarts on cmaes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,9 +34,9 @@ Imports:
     parallelMap (>= 1.1)
 Suggests:
     akima,
+    cmaesr (>= 1.0.3),
     ggplot2,
     RColorBrewer,
-    cmaes,
     DiceKriging,
     DiceOptim,
     earth,
