add docs; comment out multifid stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,13 @@ export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(makeMBOControl)
+export(makeMBOInfillCriterionAEI)
+export(makeMBOInfillCriterionCB)
+export(makeMBOInfillCriterionDIB)
+export(makeMBOInfillCriterionEI)
+export(makeMBOInfillCriterionEQI)
+export(makeMBOInfillCriterionMeanResponse)
+export(makeMBOInfillCriterionStandardError)
 export(makeMBOTrafoFunction)
 export(makeMboLearner)
 export(mbo)
@@ -28,7 +35,6 @@ export(mboFinalize)
 export(plotExampleRun)
 export(renderExampleRunPlot)
 export(setMBOControlInfill)
-export(setMBOControlMultiFid)
 export(setMBOControlMultiObj)
 export(setMBOControlMultiPoint)
 export(setMBOControlTermination)
