--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(makeMBOControl)
+export(makeMBOInfillCriterion)
 export(makeMBOInfillCriterionAEI)
 export(makeMBOInfillCriterionCB)
 export(makeMBOInfillCriterionDIB)
