add docs, rename

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,12 @@ S3method(trainLearner,MultiFidWrapper)
 export(exampleRun)
 export(exampleRunMultiObj)
 export(getGlobalOpt)
+export(getMBOInfillCriterionComponents)
+export(getMBOInfillCriterionDirection)
+export(getMBOInfillCriterionId)
+export(getMBOInfillCriterionName)
+export(getMBOInfillCriterionParam)
+export(getMBOInfillCriterionParams)
 export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
