add printer for infill crits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(predictLearner,MultiFidWrapper)
 S3method(print,MBOControl)
 S3method(print,MBOExampleRun)
 S3method(print,MBOExampleRunMultiObj)
+S3method(print,MBOInfillCriterion)
 S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 S3method(renderExampleRunPlot,MBOExampleRun)
