IC: add requires.se param, corresponding getter; add se.threshold param, minor typos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(getMBOInfillCriterionParams)
 export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
+export(hasRequiresInfillCriterionStandardError)
 export(makeMBOControl)
 export(makeMBOInfillCriterion)
 export(makeMBOInfillCriterionAEI)
