--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(predictLearner,MultiFidWrapper)
 S3method(print,MBOControl)
 S3method(print,MBOExampleRun)
 S3method(print,MBOExampleRunMultiObj)
+S3method(print,MBOInfillCriterion)
 S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 S3method(renderExampleRunPlot,MBOExampleRun)
@@ -16,10 +17,25 @@ S3method(trainLearner,MultiFidWrapper)
 export(exampleRun)
 export(exampleRunMultiObj)
 export(getGlobalOpt)
+export(getMBOInfillCriterionComponents)
+export(getMBOInfillCriterionDirection)
+export(getMBOInfillCriterionId)
+export(getMBOInfillCriterionName)
+export(getMBOInfillCriterionParam)
+export(getMBOInfillCriterionParams)
 export(getSupportedInfillCritFunctions)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
+export(hasRequiresInfillCriterionStandardError)
 export(makeMBOControl)
+export(makeMBOInfillCriterion)
+export(makeMBOInfillCriterionAEI)
+export(makeMBOInfillCriterionCB)
+export(makeMBOInfillCriterionDIB)
+export(makeMBOInfillCriterionEI)
+export(makeMBOInfillCriterionEQI)
+export(makeMBOInfillCriterionMeanResponse)
+export(makeMBOInfillCriterionStandardError)
 export(makeMBOTrafoFunction)
 export(makeMboLearner)
 export(mbo)
@@ -28,7 +44,6 @@ export(mboFinalize)
 export(plotExampleRun)
 export(renderExampleRunPlot)
 export(setMBOControlInfill)
-export(setMBOControlMultiFid)
 export(setMBOControlMultiObj)
 export(setMBOControlMultiPoint)
 export(setMBOControlTermination)
