--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,8 +36,8 @@ export(makeMBOInfillCriterionEI)
 export(makeMBOInfillCriterionEQI)
 export(makeMBOInfillCriterionMeanResponse)
 export(makeMBOInfillCriterionStandardError)
+export(makeMBOLearner)
 export(makeMBOTrafoFunction)
-export(makeMboLearner)
 export(mbo)
 export(mboContinue)
 export(mboFinalize)
