--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ env:
   global:
     - secure: "e2QLomaUqNvpHnGNdBXS4VO2/UWokrKl9UgYrqWo+fhpXaJiJuONNPNL44BuWZR2Cy7noTHrevVbTKBkGpqJR42mkjzcjd6qyR1Ctiveir+84/HTtmexouIUn5OFRH5dgyt/gquld31RlHlSYoKho3nZ7D7SnVExov9tp2FGRhU="
 
-warnings_are_errors: false
+after_success:
+  - Rscript -e 'covr::codecov()'
