--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,8 +32,8 @@ export(makeMBOInfillCriterionEI)
 export(makeMBOInfillCriterionEQI)
 export(makeMBOInfillCriterionMeanResponse)
 export(makeMBOInfillCriterionStandardError)
+export(makeMBOLearner)
 export(makeMBOTrafoFunction)
-export(makeMboLearner)
 export(mbo)
 export(mboContinue)
 export(mboFinalize)
