add roxygen for infill short cuts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,22 @@ S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 S3method(renderExampleRunPlot,MBOExampleRun)
 S3method(renderExampleRunPlot,MBOExampleRunMultiObj)
+export(crit.aei)
+export(crit.cb)
+export(crit.cb1)
+export(crit.cb2)
+export(crit.cb3)
+export(crit.cb4)
+export(crit.cb5)
+export(crit.dib1)
+export(crit.dib2)
+export(crit.dib3)
+export(crit.dib4)
+export(crit.dib5)
+export(crit.ei)
+export(crit.eqi)
+export(crit.mr)
+export(crit.se)
 export(exampleRun)
 export(exampleRunMultiObj)
 export(getGlobalOpt)
