--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ S3method(plot,MBOSingleObjResult)
 S3method(print,MBOControl)
 S3method(print,MBOExampleRun)
 S3method(print,MBOExampleRunMultiObj)
-S3method(print,MBOInfillCrit)
+S3method(print,MBOInfillCriterion)
 S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 S3method(renderExampleRunPlot,MBOExampleRun)
@@ -25,8 +25,8 @@ export(exampleRun)
 export(exampleRunMultiObj)
 export(getGlobalOpt)
 export(getMBOInfillCritComponents)
-export(getMBOInfillCritDirection)
 export(getMBOInfillCritId)
+export(getMBOInfillCritMultiplier)
 export(getMBOInfillCritName)
 export(getMBOInfillCritParam)
 export(getMBOInfillCritParams)
