optDirection multi crit problems

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ S3method(plot,MBOSingleObjResult)
 S3method(print,MBOControl)
 S3method(print,MBOExampleRun)
 S3method(print,MBOExampleRunMultiObj)
-S3method(print,MBOInfillCriterion)
+S3method(print,MBOInfillCrit)
 S3method(print,MBOMultiObjResult)
 S3method(print,MBOResult)
 S3method(renderExampleRunPlot,MBOExampleRun)
@@ -26,7 +26,6 @@ export(exampleRunMultiObj)
 export(getGlobalOpt)
 export(getMBOInfillCritComponents)
 export(getMBOInfillCritId)
-export(getMBOInfillCritMultiplier)
 export(getMBOInfillCritName)
 export(getMBOInfillCritParam)
 export(getMBOInfillCritParams)
